sets layout for navbar, header image, search bar and featured workshops

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,11 +13,13 @@
  */
 
  @import "bootstrap-sprockets";
- @import "bootstrap";
 
  @import "bootswatch/cosmo/variables";
 
- body { padding-top: 60px; }
+ @import "bootstrap";
 
  @import "bootswatch/cosmo/bootswatch";
 
+ .navbar-collapse {
+/* 	background-color: white;*/
+ }
