--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,2 +1,85 @@
-<h1>Sites#index</h1>
-<p>Find me in app/views/sites/index.html.erb</p>
+<div class="container-fluid">
+
+<!-- Hero Slider -->
+	<div class="jumbotron">
+		  <h1>Workshoply</h1>
+		  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		  <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+	</div>
+<!-- End Hero -->
+
+<!-- Search Bar -->
+<div class="container">
+  <div class="row">
+	<!--Location Button - need to format -->
+    <div class="col-md-4">
+    	<a class="btn btn-primary btn-lg">SAN FRANCISCO</a>
+    </div>
+
+	<div class="col-md-10">
+      <div class="input-group" id="adv-search">
+        <input type="text" class="form-control" placeholder="Popular Topics" />
+          <div class="input-group-btn">
+            <div class="btn-group" role="group">
+              <div class="dropdown dropdown-lg">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
+                  <div class="dropdown-menu dropdown-menu-right" role="menu">
+                    <ul>
+                      <a href="#"><li><h2>Leadership</h2></li></a>
+                      <a href="#"><li><h2>Business Organization</h2></li></a>
+                      <a href="#"><li><h2>Team Building</h2></li></a>
+                      <a href="#"><li><h2>Team Building</h2></li></a>
+                     </ul>
+             	  </div>
+           	</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<!-- End Search Bar -->
+
+<!-- Featured Workshops -->
+	  <div class="row">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="..." alt="...">
+		      <h1>Workshop 1</h1>
+		      <div class="caption">
+		        <h3>Workshop 1 Caption</h3>
+		        <p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+		        <p><a href="#" class="btn btn-primary" role="button">Book</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+		      </div>
+		    </div>
+		  </div>
+
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="..." alt="...">
+	      <h1>Workshop 2</h1>
+	      <div class="caption">
+	        <h3>Workshop 2 Caption</h3>
+	        <p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut. </p>
+	        <p><a href="#" class="btn btn-primary" role="button">Book</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="..." alt="...">
+	      <h1>Workshop 3</h1>
+	      <div class="caption">
+	        <h3>Workshop 3 Caption</h3>
+	        <p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Book</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+	      </div>
+	    </div>
+	  </div>
+</div>
+<!-- End Featured Workshops -->
+</div>
+
+
