--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,35 @@
 
  @import "bootswatch/cosmo/bootswatch";
 
- .navbar-collapse {
+.navbar-custom {
 /* 	background-color: white;*/
+	height: 100px;
  }
+
+ .jumbotron {
+ 	min-height: 600px;
+ 	text-align: center;
+ }
+
+ .thumbnail {
+/*	width: 400px;
+	margin: 0 10px;*/
+ }
+
+ .hero-text {
+ 	padding-top: 200px;
+ 	padding-bottom: 20px;
+ }
+
+ .workshop-container {
+ 	margin: 0 50px;
+ }
+
+li {
+ 	text-decoration: none;
+ }
+
+ .info-container {
+ 	background-color: #e9e9e9;
+ }
+
