--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -2,9 +2,11 @@
 
 <!-- Hero Slider -->
 	<div class="jumbotron">
-		  <h1>Workshoply</h1>
-		  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-		  <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+		  <h1>Inspire Your Team</h1>
+		  <div class="hero-text">
+		  	<h2>Book a game-changing onsite training session for your organization</h2>
+		  </div>
+		  <a class="btn btn-primary btn-lg">Learn more</a>
 	</div>
 <!-- End Hero -->
 
@@ -15,7 +17,6 @@
     <div class="col-md-4">
     	<a class="btn btn-primary btn-lg">SAN FRANCISCO</a>
     </div>
-
 	<div class="col-md-10">
       <div class="input-group" id="adv-search">
         <input type="text" class="form-control" placeholder="Popular Topics" />
@@ -24,13 +25,12 @@
               <div class="dropdown dropdown-lg">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
                   <div class="dropdown-menu dropdown-menu-right" role="menu">
-                    <ul>
-                      <a href="#"><li><h2>Leadership</h2></li></a>
-                      <a href="#"><li><h2>Business Organization</h2></li></a>
-                      <a href="#"><li><h2>Team Building</h2></li></a>
-                      <a href="#"><li><h2>Team Building</h2></li></a>
-                     </ul>
-             	  </div>
+                  <ul>
+                      <a href="#"><li>Leadership</li></a>
+                      <a href="#"><li>Business Organization</li></a>
+                      <a href="#"><li>Team Building</li></a>
+                   </ul>
+             	</div>
            	</div>
           </div>
         </div>
@@ -42,10 +42,11 @@
 <!-- End Search Bar -->
 
 <!-- Featured Workshops -->
+	<div class="workshop-container">
 	  <div class="row">
-		  <div class="col-sm-6 col-md-4">
+		  <div class="col-sm-12 col-md-4">
 		    <div class="thumbnail">
-		      <img src="..." alt="...">
+		      <img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="...">
 		      <h1>Workshop 1</h1>
 		      <div class="caption">
 		        <h3>Workshop 1 Caption</h3>
@@ -55,9 +56,9 @@
 		    </div>
 		  </div>
 
-	  <div class="col-sm-6 col-md-4">
+	  <div class="col-sm-12 col-md-4">
 	    <div class="thumbnail">
-	      <img src="..." alt="...">
+	      <img src="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/6.jpg" alt="...">
 	      <h1>Workshop 2</h1>
 	      <div class="caption">
 	        <h3>Workshop 2 Caption</h3>
@@ -67,9 +68,9 @@
 	    </div>
 	  </div>
 
-	  <div class="col-sm-6 col-md-4">
+	  <div class="col-sm-12 col-md-4">
 	    <div class="thumbnail">
-	      <img src="..." alt="...">
+	      <img src="https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/83.jpg" alt="...">
 	      <h1>Workshop 3</h1>
 	      <div class="caption">
 	        <h3>Workshop 3 Caption</h3>
@@ -78,8 +79,19 @@
 	      </div>
 	    </div>
 	  </div>
+	</div>
 </div>
 <!-- End Featured Workshops -->
+</div>
+<!-- Info Section -->
+<div class="info-container container-fluid">
+
+	<div class="row">
+		<h1>About Workshoply</h1>
+		<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+	</div>
+
+</div>
 </div>
 
 
