--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -24,13 +24,11 @@
             <div class="btn-group" role="group">
               <div class="dropdown dropdown-lg">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
-                  <div class="dropdown-menu dropdown-menu-right" role="menu">
-                  <ul>
-                      <a href="#"><li>Leadership</li></a>
-                      <a href="#"><li>Business Organization</li></a>
-                      <a href="#"><li>Team Building</li></a>
-                   </ul>
-             	</div>
+	           <ul class="dropdown-menu" role="menu">
+		            <li><a href="#">Leadership</a></li>
+		            <li><a href="#">Team Building</a></li>
+		            <li><a href="#">Project Management</a></li>
+	           </ul>
            	</div>
           </div>
         </div>
@@ -85,12 +83,12 @@
 </div>
 <!-- Info Section -->
 <div class="info-container container-fluid">
-
-	<div class="row">
-		<h1>About Workshoply</h1>
-		<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h1>About Workshoply</h1>
+				<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+		</div>
 	</div>
-
 </div>
 </div>
 
