--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 <body>
 
 <!--Nav bar -->
-<nav class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid">
+<nav class="navbar navbar-default navbar-static-top navbar-custom">
+  <div class="navbar-custom">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -19,7 +19,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Workshoply</a>
+      <a class="navbar-brand" href="#"><%= link_to image_tag("logo.png", alt: "Workshoply"), '/', class: 'navbar-brand' %> </a>
+
+
     </div>
     <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -44,9 +46,6 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
       </ul>
     </div>
   </div>
