add devise, set up User tables

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,37 @@
 </head>
 <body>
 
+<!-- Divise Flash MSG -->
+<div class="notice-error-msg">
+  <% if notice.present? %>
+    <div class="alert devise-msg <%= params[:controller] == 'plans' ? 'alert-warning animated bounceInUp' : 'alert-info' %>">
+      <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
+      <p>
+        <%= notice %>
+      </p>
+    </div>
+  <% elsif alert.present? %>
+    <div class="alert alert-danger devise-msg">
+      <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
+      <p>
+        <%= alert %>
+      </p>
+    </div>
+  <% end %>
+  <% flash.each do |name, msg| %>
+    <% if name == 'error' %>
+      <div class="notice-error-msg">
+        <div class="alert remind-msg alert-danger">
+          <a aria-label="close" class="close" data-dismiss="alert" href="#" style="padding-top: 10px">&times;</a>
+          <p>
+            <%= msg %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
+<!-- end -->
 <%= yield %>
 
 </body>
