--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,19 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#"><%= link_to image_tag("logo.png", alt: "Workshoply"), '/', class: 'navbar-brand' %> </a>
-
-
     </div>
-    <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-    </form>
-    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <ul class="nav navbar-nav navbar-left">
+        <li>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Search</button>
+          </form>
+        </li>
+      </ul> -->
+      <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#">Sign In<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Sign Up</a></li>
         <li><a href="#">About</a></li>
