--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,20 +13,15 @@
  */
 
  @import "bootstrap-sprockets";
-
  @import "bootswatch/cosmo/variables";
-
  @import "bootstrap";
-
  @import "bootswatch/cosmo/bootswatch";
 
 
 .navbar-custom {
  	background-color: #fafafa;
 	height: 92px;
-	color: red;
  }
-
 
 .navbar-nav >li > a {
 	color: #1D86FF !important;
@@ -34,41 +29,82 @@
 }
 
 
-.navbar-custom li a{
-	line-height: 60px;
+.navbar-custom li a {
+	line-height: 80px;
+	margin-right: 30px;
+}
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding: 5px 15px;
+    font-size: 36px;
+}
+a {
+    color: #7e3f9d;
+    font-size: 48px;
+    text-decoration: none;
+    background-color: #fafafa;
+
 }
 
-.navbar-custom form {
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #fff;
+    background-color: #e9e9e9;
+}
+
+/*.navbar-custom form {
 	line-height: 84px;
 	margin-left: 50px;
+}*/
+
+
+.navbar-toggle {
+    position: relative;
+    float: right;
+    margin-right: 15px;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    background-color: #000;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 0;
 }
 
-.form-control {
-	width: 80em;
-}
 
  .jumbotron {
- 	min-height: 600px;
+ 	min-height: 1000px;
  	text-align: center;
+ 	background-image: url(https://static.pexels.com/photos/1984/black-and-white-city-man-people.jpg);
+ 	background-size: cover;
+ 	background-repeat: no-repeat;
+ 	color: #fff;
  }
 
- .thumbnail {
-/*	width: 400px;
-	margin: 0 10px;*/
+ .jumbotron h1 {
+ 	padding-top: 120px;
+ 	font-size: 8em;
+ 	font-weight: bold;
  }
 
- .hero-text {
- 	padding-top: 200px;
- 	padding-bottom: 20px;
+
+ .jumbotron h2 {
+ 	padding-bottom: 260px;
+ 	font-size: 3em;
+ 	font-weight: bold;
  }
+
+#btn-signup {
+    padding: 18px 30px;
+    font-size: 42px;
+    line-height: 1.5;
+    border-radius: 0;
+}
 
  .workshop-container {
  	margin: 0 50px;
  }
 
-li {
- 	text-decoration: none;
- }
 
  .info-container {
  	background-color: #e9e9e9;
