--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 well">
+			<h2>Forgot your password?</h2>
+			<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+			<%= devise_error_messages! %>
+			<div class="field">
+				<%= f.label :email %><br />
+				<%= f.email_field :email, autofocus: true, :class => "form-control" %><br>
+			</div>
+			<div class="actions text-center">
+				<%= f.submit "Send me reset password instructions", :class => "btn btn-primary" %><br>
+			</div>
+			<% end %>
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
+</div>
