--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,12 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <% if current_user %>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+          <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Profile</a></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
         <% else %>
           <li><%= link_to "Sign Up", signup_path%></li>
           <li><%= link_to "Sign In", login_path %></li>
