--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
-
+<p>Hi there,</p>
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
-
 <p>Click the link below to unlock your account:</p>
-
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p>
+  <%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %>
+</p>
+<p>Workshoply</p>
+<p>*** This is an automatically generated email, please do not reply ***</p>
