styles location and topic search row

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -11,11 +11,11 @@
 		<div class="row">
 			<!--Location Button - need to format -->
 			<div class="col-md-4">
-				<a class="btn btn-primary btn-lg">SAN FRANCISCO</a>
+				<a class="btn btn-primary btn-lg btn-city">SAN FRANCISCO</a>
 			</div>
-			<div class="col-md-10">
+			<div class="col-md-8">
 				<div class="input-group" id="adv-search">
-					<input type="text" class="form-control" placeholder="Popular Topics" />
+					<input type="text" class="form-control" id="search-bar" placeholder="Search Popular Topics" />
 					<div class="input-group-btn">
 						<div class="btn-group" role="group">
 							<div class="dropdown dropdown-lg">
