--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -116,3 +116,15 @@ a {
   text-align: center;
 }
 
+#search-bar {
+    display: block;
+    width: 100%;
+    height: 90px;
+    font-size: 36px;
+}
+
+.btn-city {
+    margin: 20px auto;
+
+}
+
