--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -5,11 +5,11 @@
 			<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
 			<%= devise_error_messages! %>
 			<div class="field">
-				<%= f.label :email %><br />
-				<%= f.email_field :email, autofocus: true, :class => "form-control", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+				<%= f.label :email %><br>
+				<%= f.email_field :email, autofocus: true, :class => "form-control", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %><br>
 			</div>
 			<div class="actions text-center">
-				<%= f.submit "Resend confirmation instructions" %>
+				<%= f.submit "Resend confirmation instructions", :class => "btn btn-primary" %>
 			</div>
 			<% end %>
 			<%= render "devise/shared/links" %>
