--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,8 +1,14 @@
-<p>Hi there,</p>
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
-<p>Click the link below to unlock your account:</p>
-<p>
-  <%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %>
-</p>
-<p>Workshoply</p>
-<p>*** This is an automatically generated email, please do not reply ***</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 well">
+			<p>Hi there,</p>
+			<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+			<p>Click the link below to unlock your account:</p>
+			<p>
+				<%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %>
+			</p>
+			<p>Workshoply</p>
+			<p>*** This is an automatically generated email, please do not reply ***</p>
+		</div>
+	</div>
+</div>
