adds workshop controller, workshop show and index views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,3 +109,12 @@
 .btn-city {
     margin: 20px auto;
 }
+
+.workshop-box {
+  border: 1px solid black;
+}
+
+
+#speaker-box {
+  border: 1px solid black;
+}
