--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -40,7 +40,7 @@
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
 					<img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="...">
-					<h1>Workshop 1</h1>
+					<h1>Communication Class</h1>
 					<div class="caption">
 						<h3>Workshop 1 Caption</h3>
 						<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
@@ -70,7 +70,7 @@
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
 					<img src="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/6.jpg" alt="...">
-					<h1>Workshop 2</h1>
+					<h1>Team Building</h1>
 					<div class="caption">
 						<h3>Workshop 2 Caption</h3>
 						<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut. </p>
@@ -100,7 +100,7 @@
 		<div class="col-sm-12 col-md-4">
 			<div class="thumbnail">
 				<img src="https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/83.jpg" alt="...">
-				<h1>Workshop 3</h1>
+				<h1>Leadership 101</h1>
 				<div class="caption">
 					<h3>Workshop 3 Caption</h3>
 					<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
