review button and ratings button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -138,5 +138,7 @@
 
 #reviews-box {
     border: 1px solid black;
-    height: 200px;
+    height: 100px;
+    width: 400px;
+    margin: 0 30px
 }
