--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -28,8 +28,19 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6" id="reviews-box"></div>
+		<div class="col-md-6 offset-3 text-center">
+			<div class="btn btn-primary">Write a Review</div>
+		</div>
 	</div>
 	<div class="row">
-		<button>Write a Review</button>
+		<div class="col-md-6">
+		<div id="reviews-box">
+			<div class="col-md-3">
+				<img src="#" alt="userimage">
+			</div>
+			<div class="col-md-3">
+				<p>This is a review</p>
+			</div>
+		</div>
+	</div>
 	</div>
