--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,6 @@
 .navbar-custom {
  	background-color: #fafafa;
 	height: 92px;
-    
  }
 
 .navbar-nav >li > a {
@@ -32,12 +31,14 @@
 .navbar-custom li a {
 	line-height: 80px;
 	margin-right: 30px;
+  font-size: 40px;
+  color: #1D86FF;
 }
 .nav > li > a {
     position: relative;
     display: block;
     padding: 5px 15px;
-    font-size: 36px;
+   
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
@@ -110,15 +111,7 @@
     margin: 20px auto;
 }
 
-.workshop-box {
-  // border: 1px solid black;
-}
-
-
-#speaker-box, #rating-box {
-  // border: 1px solid black;
-}
-
+/* Five Star rating button */
 .rating {
   unicode-bidi: bidi-override;
   direction: rtl;
@@ -135,10 +128,20 @@
    position: absolute;
    cursor: pointer;
 }
+/* End Five Star rating button */
 
 #reviews-box {
-    border: 1px solid black;
-    height: 100px;
-    width: 400px;
-    margin: 0 30px
+    height: 120px;
+    width: 100%;
+    word-wrap: break-word;
+}
+
+#reviews-box p {
+    padding:14px;
+    font-size: 24px;
+}
+
+.btn-review{
+  margin-bottom:20px;
+  float: right;
 }
