--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-6">
@@ -29,18 +28,15 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6 offset-3 text-center">
-			<div class="btn btn-primary">Write a Review</div>
+			<div class="btn btn-primary btn-review">Write a Review</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-6">
+
+	<div class="row-fluid">
 		<div id="reviews-box">
-			<div class="col-md-3">
-				<img src="#" alt="userimage">
+					<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+				<p>This is a review. This is a review. This is a review. This is a review.</p>
+				</div>
 			</div>
-			<div class="col-md-3">
-				<p>This is a review</p>
-			</div>
-		</div>
-	</div>
-	</div>
+
+</div>
