--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -18,11 +18,11 @@
 			</div>
 			<div class="col-md-6" id="rating-box">
 				<h2>Rating</h2>
-				<img src="#" alt="speaker-image" width="100%">
 				<div class="rating">
 					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
 				</div>
-				<div class="btn btn-primary">Rate</div>
+				</div>
+			<div class="btn btn-primary btn-rate">Rate</div>
 			</div>
 		</div>
 	</div>
@@ -31,12 +31,23 @@
 			<div class="btn btn-primary btn-review">Write a Review</div>
 		</div>
 	</div>
-
 	<div class="row-fluid">
 		<div id="reviews-box">
-					<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
-				<p>This is a review. This is a review. This is a review. This is a review.</p>
-				</div>
-			</div>
-
+			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+			<p>This is a review. This is a review. This is a review. This is a review.</p>
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div id="reviews-box">
+			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+			<p>This is a review. This is a review. This is a review. This is a review.</p>
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div id="reviews-box">
+			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+			<p>This is a review. This is a review. This is a review. This is a review.</p>
+		</div>
+	</div>
+</div> 
 </div>
