--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -6,11 +6,11 @@
 				<h1><%= @workshop.title %></h1>
 				<h2>About this Seminar</h2>
 				<p><%= @workshop.description %></p>
-				<p><%= @workshop.host %></p>
+				<p><%= @workshop.user_id %></p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="col-md-6" id="speaker-box">
+			<div class="col-md-12" id="speaker-box">
 				<h2>About the Speaker</h2>
 				<img src="https://static.pexels.com/photos/61100/pexels-photo-61100-large.jpeg" alt="speaker-image" width="100%">
 				<p>JANE DOE is the Bay Area's leading expert on unconcious bias in the workplace. She brings empathy, passion, and energy to her informative workshops on how to identify, explore, and ultimately shed unconscious biases that may be affecting how you relate to your co-workers.</p>
@@ -21,33 +21,33 @@
 				<div class="rating">
 					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
 				</div>
-				</div>
-			<div class="btn btn-primary btn-rate">Rate</div>
 			</div>
-		</div>
+			<!-- 			<div class="btn btn-primary btn-rate">Rate</div>
+		-->			</div>
 	</div>
-	<div class="row">
-		<div class="col-md-6 offset-3 text-center">
-			<div class="btn btn-primary btn-review">Write a Review</div>
-		</div>
+</div>
+<div class="row">
+	<div class="col-md-6 offset-3 text-center">
+		<div class="btn btn-primary btn-review">Write a Review</div>
 	</div>
-	<div class="row-fluid">
-		<div id="reviews-box">
-			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
-			<p>This is a review. This is a review. This is a review. This is a review.</p>
-		</div>
+</div>
+<div class="row-fluid">
+	<div id="reviews-box">
+		<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+		<p>This is a review. This is a review. This is a review. This is a review.</p>
 	</div>
-	<div class="row-fluid">
-		<div id="reviews-box">
-			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
-			<p>This is a review. This is a review. This is a review. This is a review.</p>
-		</div>
+</div>
+<div class="row-fluid">
+	<div id="reviews-box">
+		<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+		<p>This is a review. This is a review. This is a review. This is a review.</p>
 	</div>
-	<div class="row-fluid">
-		<div id="reviews-box">
-			<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
-			<p>This is a review. This is a review. This is a review. This is a review.</p>
-		</div>
+</div>
+<div class="row-fluid">
+	<div id="reviews-box">
+		<img src="http://www.javadismiles.com/wp-content/uploads/2015/05/images-articles-contributors-display-user-icon-silhouette-dd6c3d8c7e5dee8f722747875be985e7.png" alt="userimage" height="100px">
+		<p>This is a review. This is a review. This is a review. This is a review.</p>
 	</div>
-</div> 
+</div>
+</div>
 </div>
