--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -13,7 +13,7 @@
 			<div class="col-md-12" id="speaker-box">
 				<h2>About the Speaker</h2>
 				<img src="https://static.pexels.com/photos/61100/pexels-photo-61100-large.jpeg" alt="speaker-image" width="100%">
-				<p>JANE DOE is the Bay Area's leading expert on unconcious bias in the workplace. She brings empathy, passion, and energy to her informative workshops on how to identify, explore, and ultimately shed unconscious biases that may be affecting how you relate to your co-workers.</p>
+				<p>Jane Doe is the Bay Area's leading expert on unconcious bias in the workplace. She brings empathy, passion, and energy to her informative workshops on how to identify, explore, and ultimately shed unconscious biases that may be affecting how you relate to your co-workers.</p>
 				<div class="btn btn-primary">Request to Book</div>
 			</div>
 			<div class="col-md-6" id="rating-box">
@@ -22,8 +22,7 @@
 					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
 				</div>
 			</div>
-			<!-- 			<div class="btn btn-primary btn-rate">Rate</div>
-		-->			</div>
+		</div>
 	</div>
 </div>
 <div class="row">
