--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -5,14 +5,15 @@
 				<img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="..." width="100%">
 				<h1><%= @workshop.title %></h1>
 				<h2>About this Seminar</h2>
+				<h3>Speaker: <%= @workshop.user.full_name %></h3>
 				<p><%= @workshop.description %></p>
-				<p><%= @workshop.user_id %></p>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<div class="col-md-12" id="speaker-box">
 				<h2>About the Speaker</h2>
 				<img src="https://static.pexels.com/photos/61100/pexels-photo-61100-large.jpeg" alt="speaker-image" width="100%">
+				<!-- this part will be replace with @workshop.user.about later >>> Trung -->
 				<p>Jane Doe is the Bay Area's leading expert on unconcious bias in the workplace. She brings empathy, passion, and energy to her informative workshops on how to identify, explore, and ultimately shed unconscious biases that may be affecting how you relate to your co-workers.</p>
 				<div class="btn btn-primary">Request to Book</div>
 			</div>
