adds links to site index page

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -35,17 +35,18 @@
 	<br>
 	<!-- End Search Bar -->
 	<!-- Featured Workshops -->
-	<div class="workshop-container">
+<div class="workshop-container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
 					<img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="...">
-					<h1>Communication Class</h1>
-					<div class="caption">
+ 					<div class="caption">
 						<h3>Workshop 1 Caption</h3>
 						<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
 						<!-- Modal Button -->
 						<button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#workshopModal1">BOOK</button>
+				<a class="btn btn-primary" href="#>">BOOK</a>
+
 						<div id="workshopModal1" class="modal fade" role ="dialog">
 							<div class="modal-dialog modal-lg">
 								<!--Modal content -->
