--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,9 @@
  @import "bootswatch/cosmo/variables";
  @import "bootstrap";
  @import "bootswatch/cosmo/bootswatch";
+ @import "sites";  // for css in sites.css
+ @import "users"; // for css in users.css
+ @import "workshops"; // for css in workshops.css
 
 
 .navbar-custom {
