--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -40,6 +40,7 @@
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
 					<img src="https://hd.unsplash.com/1/bag-and-hands.jpg" alt="...">
+				<h1>Leadership 101</h1>
  					<div class="caption">
 						<h3>Workshop 1 Caption</h3>
 						<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
@@ -71,7 +72,7 @@
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
 					<img src="https://s3.amazonaws.com/StartupStockPhotos/uploads/20160503/6.jpg" alt="...">
-					<h1>Team Building</h1>
+					<h1>Managing Unconscious Bias</h1>
 					<div class="caption">
 						<h3>Workshop 2 Caption</h3>
 						<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut. </p>
@@ -101,7 +102,7 @@
 		<div class="col-sm-12 col-md-4">
 			<div class="thumbnail">
 				<img src="https://s3.amazonaws.com/StartupStockPhotos/20140808_StartupStockPhotos/83.jpg" alt="...">
-				<h1>Leadership 101</h1>
+				<h1>Team Building</h1>
 				<div class="caption">
 					<h3>Workshop 3 Caption</h3>
 					<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
@@ -135,11 +136,11 @@
 </div>
 <!-- Info Section -->
 <div class="info-container container-fluid">
-<div class="row">
-<div class="col-md-8 col-md-offset-2">
-	<h1>About Workshoply</h1>
-	<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
-</div>
-</div>
-</div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2">
+			<h1>About Workshoply</h1>
+				<p>Knausgaard gentrify irony, swag affogato twee narwhal tumblr gochujang schlitz aesthetic meh umami church-key you probably haven't heard of them. Man braid paleo 90's chicharrones yuccie you probably haven't heard of them, semiotics shoreditch franzen aesthetic truffaut.</p>
+			</div>
+		</div>
+	</div>
 </div>
