--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,27 +21,79 @@
  @import "users"; // for css in users.css
  @import "workshops"; // for css in workshops.css
 
+.navbar-logo img {
+  height: 50px;
+}
 
 .navbar-custom {
  	background-color: #fafafa;
-	height: 92px;
- }
+  border-color: #fafafa;
+	height: 80px;
+  ul.nav.navbar-nav.navbar-right {
+    padding-right: 30px;
+  }
 
+  // overrided mobile navbar styling
+  .navbar-header button.navbar-toggle {
+    // change style hamburger button
+    margin-top: 15px;
+    background-color: #efefef;
+    border: 1.5px solid #aeaeae;
+    border-radius: 5px;
+    padding: 15px;
+    .icon-bar {
+      width: 25px;
+    }
+  }
+  .navbar-collapse {
+    // style navbar collapse when click hamburger button
+    background-color: #fafafa;
+    border-color: #fff;
+    border-width: 3px;
+    @media (max-width: 767px) {
+      margin-top: 10px;
+      ul.nav.navbar-nav.navbar-right {
+        padding: 0px;
+      }
+      .navbar-nav .open ul.dropdown-menu {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+      .navbar-nav .open .dropdown-menu > li > a {
+        color: #1D86FF;
+      }
+      .navbar-nav .open .dropdown-menu > li > a:hover, 
+      .navbar-nav .open .dropdown-menu > li > a:focus {
+        background-color: #e9e9e9;
+      }
+    }
+  }
+  .navbar-nav > .open > a, 
+  .navbar-nav > .open > a:hover, 
+  .navbar-nav > .open > a:focus {
+    background-color: #2780E3 !important;
+    color: #fff !important;
+  }
+  // end overrided mobile navbar styling
+}
 .navbar-nav >li > a {
 	color: #1D86FF !important;
-	font-size: 22px;
 }
 
 .navbar-custom li a {
 	line-height: 80px;
-	margin-right: 30px;
-  font-size: 40px;
+  font-size: 18px;
   color: #1D86FF;
 }
+
+.navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+  line-height: 50px;
+}
+
 .nav > li > a {
-    position: relative;
-    display: block;
-    padding: 5px 15px;
+  position: relative;
+  display: block;
+  padding: 0px 15px;
    
 }
 
@@ -54,7 +106,6 @@
     position: relative;
     float: right;
     margin-right: 15px;
-    padding: 9px 10px;
     margin-top: 8px;
     margin-bottom: 8px;
     background-color: #000;
