--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,50 +1,38 @@
+<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+  <div class="alert alert-danger">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+<% end %>
 <div class="container">
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div class="alert alert-danger">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+      <h2>Change password</h2>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
         <%= devise_error_messages! %>
 
         <div class="field">
-          <%= f.label :full_name %><br />
-          <%= f.text_field :full_name, autofocus: true, :class => "form-control" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, :class => "form-control" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
-          <% if @minimum_password_length %>
-            <em><%= @minimum_password_length %> characters minimum</em>
-          <% end %>
-        </div>
-
-        <div class="field">
-          <%= f.label :password_confirmation %><i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.label :current_password, "Old password" %>
           <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %>
         </div>
-
+        <br>
+        <div class="field">
+          <%= f.label :password, "New password" %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
+        </div>
+        <br>
+        <div class="field">
+          <%= f.label :password_confirmation, "Confirm new password" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
+        </div>
+        <br>
         <div class="actions">
-          <%= f.submit "Update", :class => "btn btn-primary" %>
+          <%= f.submit "Change", :class => "btn btn-primary" %>
+          <%= link_to "Cancel", :back, :class => "btn btn-default" %>
         </div>
       <% end %>
-      
-      <%= link_to "Back", :back %>
 
     </div>
   </div>
