changes button text to message

--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -21,8 +21,8 @@
 						<div id="workshop-description">
 						<p><%= @workshop.description %></p>
 						</div>
-						<div class="col-md-9">
-							<div class="btn btn-danger">Request to Book</div>
+						<div class="col-md-9 center-block">
+							<button class="btn btn-danger center-block">MESSAGE</button>
 						</div>
 					</div>
 					<div class="col-md-12">
