add place autocomplere to user location

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="field">
         <%= f.label :location, "Location*" %><br />
-        <%= f.text_field :location, :class => "form-control" %>
+        <%= f.text_field :location, :class => "form-control location-input" %>
       </div>
       <div class="field">
         <%= f.label :password, "Password*" %>
