--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="field">
           <%= f.label :location %><br />
-          <%= f.text_field :location, :class => "form-control" %>
+          <%= f.text_field :location, :class => "form-control location-input" %>
         </div>
         <div class="field">
           <%= f.label :bio, "Bio (100-1000 characters)" %><br />
